--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -1,46 +1,62 @@
 .banner{
     display: flex;
-    width: 100vw;
-    margin: 10px auto;
-    height: 330px;
+    max-width: 1440px;
+    margin: 0 auto;
+    height: 352px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .banner__img{
     display: flex;
     flex-direction: column;
     justify-content: end;
-    width: 100vw;
-    height: 330px;
+    width: 100%;
+    height: 100%;
     background-image: url(..//img/banner-image.png);
     background-size: 100% 330px;
     background-repeat: no-repeat;
 }
 .banner__info{
+    position: static;
     display: flex;
-    width: 1000px;
-    height: 330px;
-    margin: 10px auto;
+    width: 1136px;
+    height: 170px;
+    margin: 0 auto;
     flex-direction: column;
     justify-content:end;
+    margin-bottom: 40px;
+    
 }
 .banner__titulo{
+    width: 751px;
+    height: 61px;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
     color: #fff;
-    font-size: 2.5rem;
+    font-size: 52px;
     margin-bottom: 10px;
 }
 .banner__paragrph{
+    width: 751px;
+    height: 26px;
+    font-family: "Raleway";
+    font-style: normal;
+    font-weight: 700;
     color:#fff;
-    font-size: 1rem;
+    font-size: 21.5px;
     margin-bottom: 15px;
+    line-height: 36px;
 }
 .banner__btn{
-    display: block;
-    width: 80px;
-    padding: 12px 20px;
-    margin-bottom: 25px;
+    width: 125px;
+    height: 51px;
     text-decoration: none;
     color: #fff;
-    font-size: 0.8rem;
-    background-color: rgb(14, 105, 243);
+    background-color: #2A7AE4;
     text-align: center;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 51px;
 }
