--- a/estilos/encabezado.css
+++ b/estilos/encabezado.css
@@ -1,8 +1,13 @@
 .encabezado{
+    max-width: 1440px;
+    margin: 0px auto;
+    height: 115px;
+}
+.encabezado__container{
+    max-width: 1136px;
+    height: 115px;
+    margin: 0 auto;
     display: flex;
-    max-width: 1000px;
-    margin: 10px auto;
-    height: 60px;
     justify-content: space-between;
     align-items: center;
 }
@@ -12,8 +17,8 @@
     width: auto;
 }
 .encabezado__busqueda{
-    width:300px;
-    height: 30px;
+    width:393px;
+    height: 40px;
     margin-left: 10px;
     padding-left: 10px;
     border-radius: 20px;
@@ -28,14 +33,15 @@
 }
 .encabezado__login{
     display: flex;
-    width: 130px;
-    height: 30px;
+    width: 182px;
+    height: 51px;
     border: 2px solid #2a7ae4;
     border-radius: 2px;
     justify-content: center;
     align-items: center;
 }
 .encabezado__btnLogin{
+    font-size: 20px;
     text-decoration: none;
-    color: #2a7ae4;
+    color: #2A7AE4;
 }
