--- a/estilos/section1.css
+++ b/estilos/section1.css
@@ -11,6 +11,7 @@
     width: 100%;
     display: flex;
     height: auto;
+    align-items: center;
     justify-content: space-between;
 }
 .section1__titulo{
