--- a/estilos/diversos.css
+++ b/estilos/diversos.css
@@ -13,6 +13,7 @@
     display: flex;
     height: auto;
     justify-content: space-between;
+    align-items: center;
 }
 .diversos__titulo{
     width: 148px;
