--- a/estilos/responsive.css
+++ b/estilos/responsive.css
@@ -91,7 +91,64 @@
         width: 768px;
         height: 102px;
     }
+    .slider{
+        width: 740px;
+        height: 435px;
+        left: 22px;
+        bottom: auto;
+        padding-top: 5px;
+    }
+    .slider__cabecera{
+        width: 100%;
+        height: 170px;
+        box-sizing: border-box;
+        padding: 0 20px;
+    }
+    .slider__img{
+        width: 254px;
+        height: 157px;
+        background-size: 254px 157px;
+    }
+    .slider__datos{
+        width: 485px;
+        height: inherit;
+    }
+    .slider__titulo{
+        font-size: 22px;
+    }
+    .slider__paragraph{
+        font-size: 14px;
+    }
+    .slider__titulo, .slider__paragraph{
+        margin-bottom: 10px;
+    }
+    .slider__footer{
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 20px;
+        margin: 0px;
+    }
+    .slider__footer__titulo{
+        font-size: 22px;
+        height: 31px;
+    }
+    .slider__list{
+        width: 100%;
+        height: auto;
+    }
+    .slider__ul__img{
+        width: 164px;
+        height: 145px;
+    }
+    .slider li:nth-child(5){
+        display: none;
+    }
+    .slider li:nth-child(6){
+        display: none;
+    }
 }
+
+/*Pantallas de 360px*/
 @media (max-width: 400px){
     .encabezado{
         width: 360px;
