--- a/estilos/slider.css
+++ b/estilos/slider.css
@@ -9,13 +9,14 @@
     margin: 0 auto;
     padding-top: 50px;
     z-index: 10;
-    display: none;
+    /*display: none;*/
 }
 .slider__cabecera{
     width: 1136px;
     height: 400px;
     margin: 0 auto;
     display: flex;
+    align-items: center;
 }
 .slider__img{
     width: 568px;
